Finish writing cared data in the offline mode.

--- a/Src/Grability/Base.lproj/LaunchScreen.storyboard
+++ b/Src/Grability/Base.lproj/LaunchScreen.storyboard
@@ -20,7 +20,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Grability" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LTW-hm-PIE">
                                 <rect key="frame" x="255" y="287" width="90" height="26"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="21"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" red="0.17254901960784313" green="0.52941176470588236" blue="0.34901960784313724" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All Rights Reserved © 2016 Ahmad Abdul-Gawad Mahmoud" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qfk-yW-mE3">
@@ -29,14 +29,24 @@
                                     <constraint firstAttribute="height" constant="21" id="eD5-hI-5Ar"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" red="0.17254901960784313" green="0.47241721772601664" blue="0.36422514475588891" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="S45-Ia-P3B">
+                                <rect key="frame" x="258" y="195" width="84" height="72"/>
+                                <color key="backgroundColor" red="0.16862745098039217" green="0.53725490196078429" blue="0.34901960784313724" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="84" id="JuQ-VJ-Y1S"/>
+                                    <constraint firstAttribute="height" constant="72" id="ZpH-ry-Po7"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="S45-Ia-P3B" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="2hS-nH-uqI"/>
                             <constraint firstItem="LTW-hm-PIE" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="UOj-3p-ntI"/>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="qfk-yW-mE3" secondAttribute="bottom" constant="8" id="a3T-RE-Wbh"/>
+                            <constraint firstItem="LTW-hm-PIE" firstAttribute="top" secondItem="S45-Ia-P3B" secondAttribute="bottom" constant="20" id="gdU-Sr-nhz"/>
                             <constraint firstItem="qfk-yW-mE3" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="rVc-1l-lOh"/>
                             <constraint firstItem="LTW-hm-PIE" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ub0-ah-Qnv"/>
                         </constraints>
@@ -47,4 +57,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo.jpg" width="160" height="160"/>
+    </resources>
 </document>
